@@ -68,8 +68,8 @@ VOID:ENUM,FLOAT
 VOID:ENUM,FLOAT,BOOLEAN
 VOID:ENUM,INT
 VOID:ENUM,INT,BOOLEAN
+VOID:ENUM,BOXED
 VOID:INT
-VOID:INT,BOXED
 VOID:INT,BOOLEAN
 VOID:INT,INT
 VOID:INT,INT,BOXED
