@@ -1,5 +1,11 @@
 2008-12-26  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkentry.c: Emit ::icon-pressed regardless which button was
+	pressed. Also make it explicit in the signal signature that the
+	position parameter is a GtkEntryIconPosition.
+
+2008-12-26  Matthias Clasen  <mclasen@redhat.com>
+
 	* gtk/gtkentry.c: Emit property notification for the text-length
 	property.
 
